test/language/errors/errors.hm
func runtime(s) {
  set i = index(s, "\n")
  if i > 0 { return s[:i] }
  return s
}
